--- a/TaskMaster.Web/Pages/Project/GetProjects.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjects.cshtml
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-12 form-group my-3">
 
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
                                 <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
 
                             </div>
