--- a/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
@@ -69,8 +69,8 @@
             </div>
             <div class="col-8 offset-2 d-inline-flex mt-1">
                 <div class="col-8 form-group mx-1">
-                    <span> Explation</span>
-                    <textarea class="form-control" asp-for="UpdateProject.StatusExplation" rows="4"></textarea>
+                    <span> Comment</span>
+                    <textarea class="form-control" asp-for="UpdateProject.Comment" rows="4"></textarea>
                 </div>
             </div>
             <div class="col-8 offset-2 mt-2">
