--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -40,9 +40,8 @@
 
                             <div class="col-12 form-group">
                                 <span> Description</span>
-                                <input asp-for="CreateTask.Description" type="text" class="form-control">
+                                <textarea class="form-control" asp-for="CreateTask.Description" rows="2"></textarea>
                             </div>
-
                             <div class="col-12 d-inline-flex">
                                 <div class="col-6 form-group">
                                     <span> Status</span>
