--- a/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@Model.Project.Name</h5>
                     <p class="card-text text-start"><span class="text-primary">Status: </span>@Model.Project.Status</p>
-                    <p class="card-text text-start"><span class="text-primary">Explation: </span>@Model.Project.StatusExplation</p>
+                    <p class="card-text text-start"><span class="text-primary">Comment: </span>@Model.Project.Comment</p>
                     <p class="card-text text-start"><span class="text-primary">Description: </span>@Model.Project.Description</p>
                     <p class="card-text text-start"><span class="text-primary">Story: </span>@Model.Project.Story</p>
                     <span class="text-primary text-start">Starting: </span>@Model.Project.StartingDate!.Value.ToShortDateString() -
