--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -5,23 +5,123 @@
 }
 
 
+<style>
+    body {
+        background-color: #eee
+    }
+
+    .card {
+        border: none;
+        border-radius: 10px
+    }
+
+    .c-details span {
+        font-weight: 300;
+        font-size: 13px
+    }
+
+    .icon {
+        width: 50px;
+        height: 50px;
+        background-color: #eee;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 39px
+    }
+
+    .badge span {
+        background-color: #fffbec;
+        width: 60px;
+        height: 25px;
+        padding-bottom: 3px;
+        border-radius: 5px;
+        display: flex;
+        color: #fed85d;
+        justify-content: center;
+        align-items: center
+    }
+
+    .progress {
+        height: 10px;
+        border-radius: 10px
+    }
+
+        .progress div {
+            background-color: red
+        }
+
+    .text1 {
+        font-size: 14px;
+        font-weight: 600
+    }
+
+    .text2 {
+        color: #a5aec0
+    }
 
 
-<div class="text-center">
-    <h1 class="display-4">Task Master</h1>
-    <p class="display-6">Project Tasks and Issues Management</p>
-</div>
+</style>
 
-<div class="container my-5">
-    <div class="row d-flex">
-        <div class="col-4">
-            <img src="https://bootdey.com/img/Content/bg1.jpg" class="img-responsive rounded-3" width="400" height="500">
+
+
+
+<div class="container mt-5 mb-3">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card p-3 mb-2">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="fa-solid fa-cube text-black"></i></div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0">Projects</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <h3 class="heading">Total <br>2</h3>
+                </div>
+                <div class="mt-1">
+                    <a class="link-info" asp-page="/Project/GetProjects"><i class="fa-solid fa-arrow-right text-black"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-4">
-            <img src="https://bootdey.com/img/Content/bg1.jpg" alt="" class="img-responsive rounded" width="400" height="500">
+        <div class="col-md-4">
+            <div class="card p-3 mb-2">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="fa-solid fa-clipboard-check text-black"></i></div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0">Tasks</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <h3 class="heading">Total <br>5</h3>
+                </div>
+                <div class="mt-1">
+                    <a class="link-info"><i class="fa-solid fa-arrow-right text-black"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-4">
-            <img src="https://bootdey.com/img/Content/bg1.jpg" alt="" class="img-responsive rounded" width="400" height="500">
+        <div class="col-md-4">
+            <div class="card p-3 mb-2">
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="icon"> <i class="fa-solid fa-eye text-black"></i></div>
+                        <div class="ms-2 c-details">
+                            <h6 class="mb-0">Issues</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <h3 class="heading">Total <br>6</h3>
+                </div>
+                <div class="mt-1">
+                    <a class="link-info"><i class="fa-solid fa-arrow-right text-black"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
