Service methods and Index page was updated

--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <h3 class="heading">Total <br>2</h3>
+                    <h3 class="heading">Total <br>@Model.ProjectCount</h3>
                 </div>
                 <div class="mt-1">
                     <a class="link-info" asp-page="/Project/GetProjects"><i class="fa-solid fa-arrow-right text-black"></i></a>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <h3 class="heading">Total <br>5</h3>
+                    <h3 class="heading">Total <br>@Model.TaskCount</h3>
                 </div>
                 <div class="mt-1">
                     <a class="link-info"><i class="fa-solid fa-arrow-right text-black"></i></a>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="mt-3">
-                    <h3 class="heading">Total <br>6</h3>
+                    <h3 class="heading">Total <br>@Model.IssueCount</h3>
                 </div>
                 <div class="mt-1">
                     <a class="link-info"><i class="fa-solid fa-arrow-right text-black"></i></a>
