--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -119,7 +119,7 @@
                     <h3 class="heading">Total <br>@Model.IssueCount</h3>
                 </div>
                 <div class="mt-1">
-                    <a class="link-info"><i class="fa-solid fa-arrow-right text-black"></i></a>
+                    <a class="link-info" asp-page="/ProjectIssue/GetIssues"><i class="fa-solid fa-arrow-right text-black"></i></a>
                 </div>
             </div>
         </div>
