Project Task model, service and pages were updated

--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -73,8 +73,8 @@
                             </div>
                             <div class="col-12 form-group">
 
-                                <span> Explation</span>
-                                <textarea class="form-control" asp-for="CreateTask.StatusExplation" rows="3"></textarea>
+                                <span> Comment</span>
+                                <textarea class="form-control" asp-for="CreateTask.Comment" rows="3"></textarea>
 
                             </div>
                             <div class="col-12 form-group">
