--- a/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
@@ -60,8 +60,8 @@
                     </div>
                 </div>
                 <div class="col-12 form-group p-1">
-                    <span> Explation</span>
-                    <textarea class="form-control" asp-for="UpdateTask.StatusExplation" rows="3"></textarea>
+                    <span> Comment</span>
+                    <textarea class="form-control" asp-for="UpdateTask.Comment" rows="3"></textarea>
                 </div>
                 <div class="form-group p-1 my-2">
                     <div class="col-8 form-group">
