--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -60,9 +60,166 @@
     .text2 {
         color: #a5aec0
     }
-
-
 </style>
+
+
+
+<!--Create Project-->
+<div class="modal fade" id="createProjectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Project</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col">
+                        <form method="post" asp-page-handler="CreateProject">
+                            <div class="col-12 form-group">
+                                <span>Title</span>
+                                <input asp-for="CreateProject.Name" type="text" class="form-control">
+                            </div>
+
+                            <div class="col-12 form-group">
+                                <span> Repo</span>
+                                <input asp-for="CreateProject.Repo" type="text" class="form-control">
+                            </div>
+
+                            <div class="col-12 form-group">
+                                <span> Description</span>
+                                <textarea class="form-control" asp-for="CreateProject.Description" rows="2"></textarea>
+                            </div>
+
+                            <div class="col-12 form-group">
+                                <span>Story</span>
+                                <textarea class="form-control" asp-for="CreateProject.Story" rows="3"></textarea>
+                            </div>
+                            <div class="col-12 form-group">
+                                <span> Status</span>
+                                <select asp-for="CreateProject.ProjectStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.ProjectDtos.StatusDto>()" class="form-control form-select">
+                                    <option value="">Choose..</option>
+                                </select>
+                            </div>
+
+                            <div class="col-12 d-inline-flex">
+                                <div class="col-4 form-group">
+                                    <span> Starting</span>
+                                    <input type="date" class="form-control" asp-for="CreateProject.StartingDate">
+                                </div>
+                                <div class="col-4 form-group">
+                                    <span> Duration</span>
+                                    <input type="text" class="form-control" asp-for="CreateProject.Duration">
+                                </div>
+                                <div class="col-4 form-group">
+                                    <span> Finished</span>
+                                    <input type="date" class="form-control" asp-for="CreateProject.FinishedDate">
+                                </div>
+                            </div>
+                            <div class="col-12 form-group">
+                                <span> Comment</span>
+                                <textarea class="form-control" asp-for="CreateProject.Comment" rows="3"></textarea>
+                            </div>
+                            <div class="col-12 form-group my-3">
+
+                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--Create Task-->
+<div class="modal fade" id="createTaskModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Task</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col">
+                        <form method="post" asp-page-handler="CreateTask">
+                            <div class="col-12 form-group">
+                                <span> Project</span>
+                                <select asp-for="CreateTask.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select">
+                                    <option value="">Choose..</option>
+                                </select>
+                            </div>
+                            <div class="col-12 form-group">
+                                <span> Title</span>
+                                <input asp-for="CreateTask.Title" type="text" class="form-control">
+                            </div>
+
+                            <div class="col-12 form-group">
+                                <span> Description</span>
+                                <textarea class="form-control" asp-for="CreateTask.Description" rows="2"></textarea>
+                            </div>
+                            <div class="col-12 d-inline-flex">
+                                <div class="col-6 form-group">
+                                    <span> Status</span>
+                                    <select asp-for="CreateTask.TaskStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select">
+                                        <option value="">Choose..</option>
+                                    </select>
+                                </div>
+                                <div class="col-6 form-group">
+                                    <span> Priority</span>
+                                    <select asp-for="CreateTask.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
+                                        <option value="">Choose..</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-12 d-inline-flex">
+                                <div class="col-4 form-group">
+                                    <span> Starting</span>
+                                    <input type="date" class="form-control" asp-for="CreateTask.StartingDate">
+                                </div>
+                                <div class="col-4 form-group">
+                                    <span> Duration</span>
+                                    <input type="text" class="form-control" asp-for="CreateTask.Duration">
+                                </div>
+                                <div class="col-4 form-group">
+                                    <span> Finished</span>
+                                    <input type="date" class="form-control" asp-for="CreateTask.FinishedDate">
+                                </div>
+                            </div>
+                            <div class="col-12 form-group">
+
+                                <span> Comment</span>
+                                <textarea class="form-control" asp-for="CreateTask.Comment" rows="3"></textarea>
+
+                            </div>
+                            <div class="col-12 form-group">
+
+                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -73,9 +230,12 @@
             <div class="card p-3 mb-2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
-                        <div class="icon"> <i class="fa-solid fa-cube text-black"></i></div>
+                        <div class="icon"><i class="fa-solid fa-cube text-black"></i></div>
                         <div class="ms-2 c-details">
                             <h6 class="mb-0">Projects</h6>
+                        </div>
+                        <div class="m-5">
+                            <button data-bs-toggle="modal" data-bs-target="#createProjectModal" class="btn btn-light btn-sm text-end mx-2 text-black"><i class="fa-solid fa-square-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -96,6 +256,9 @@
                             <h6 class="mb-0">Tasks</h6>
                         </div>
                     </div>
+                    <div class="m-5">
+                        <button data-bs-toggle="modal" data-bs-target="#createTaskModal" class="btn btn-light btn-sm text-end mx-2 text-black"><i class="fa-solid fa-square-plus"></i></button>
+                    </div>
                 </div>
                 <div class="mt-3">
                     <h3 class="heading">Total <br>@Model.TaskCount</h3>
@@ -113,6 +276,9 @@
                         <div class="ms-2 c-details">
                             <h6 class="mb-0">Issues</h6>
                         </div>
+                    </div>
+                    <div class="m-5">
+                        <button data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-light btn-sm text-end mx-2 text-black"><i class="fa-solid fa-square-plus"></i></button>
                     </div>
                 </div>
                 <div class="mt-3">
