--- a/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjectDetails.cshtml
@@ -2,7 +2,7 @@
 @model TaskMaster.Web.Pages.Project.GetProjectDetailsModel
 
     <div class="row justify-content-center mt-lg-5">
-        <div class="col-8 offset-2">
+        <div class="col-12">
             <div class="card text-center">
                 <div class="card-header">
                     <ul class="nav nav-pills card-header-pills">
